[gd_scene load_steps=32 format=3 uid="uid://bwaayo7m2tkb2"]

[ext_resource type="Script" uid="uid://c46ehjy0etjxv" path="res://ui/dialogue/random_npc_dialogue.gd" id="1_kicr1"]
[ext_resource type="Texture2D" uid="uid://btgoosnq1kdgt" path="res://assets/dialogue/angry-dialogue-box-npc.png" id="2_74w31"]
[ext_resource type="Texture2D" uid="uid://jty6pq5k58iv" path="res://assets/dialogue/normal-dialogue-box-npc.png" id="3_dp5qy"]
[ext_resource type="Texture2D" uid="uid://ba2a7xprxnfo" path="res://assets/dialogue/speaking-effect-2-frames.png" id="4_8h8um"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pc224"]
atlas = ExtResource("2_74w31")
region = Rect2(0, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_788fp"]
atlas = ExtResource("2_74w31")
region = Rect2(22, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_omqgx"]
atlas = ExtResource("2_74w31")
region = Rect2(44, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6tgt"]
atlas = ExtResource("2_74w31")
region = Rect2(66, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_un5bb"]
atlas = ExtResource("2_74w31")
region = Rect2(88, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_msh33"]
atlas = ExtResource("2_74w31")
region = Rect2(110, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtu2i"]
atlas = ExtResource("2_74w31")
region = Rect2(132, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2lxm"]
atlas = ExtResource("2_74w31")
region = Rect2(154, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmakn"]
atlas = ExtResource("2_74w31")
region = Rect2(176, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypj52"]
atlas = ExtResource("3_dp5qy")
region = Rect2(0, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjft5"]
atlas = ExtResource("3_dp5qy")
region = Rect2(22, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvjg0"]
atlas = ExtResource("3_dp5qy")
region = Rect2(44, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsm50"]
atlas = ExtResource("3_dp5qy")
region = Rect2(66, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn0oq"]
atlas = ExtResource("3_dp5qy")
region = Rect2(88, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_ix0bm"]
atlas = ExtResource("3_dp5qy")
region = Rect2(110, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_h80uv"]
atlas = ExtResource("3_dp5qy")
region = Rect2(132, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wxid"]
atlas = ExtResource("3_dp5qy")
region = Rect2(154, 0, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvvue"]
atlas = ExtResource("4_8h8um")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uxyx"]
atlas = ExtResource("4_8h8um")
region = Rect2(12, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss87f"]
atlas = ExtResource("4_8h8um")
region = Rect2(24, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_rge65"]
atlas = ExtResource("4_8h8um")
region = Rect2(36, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_8447h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc224")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_788fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omqgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6tgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un5bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msh33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtu2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2lxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmakn")
}],
"loop": false,
"name": &"angry",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypj52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjft5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvjg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsm50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn0oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix0bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h80uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wxid")
}],
"loop": false,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvvue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uxyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss87f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rge65")
}],
"loop": false,
"name": &"speaking",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_74w31"]
atlas = ExtResource("4_8h8um")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp5qy"]
atlas = ExtResource("4_8h8um")
region = Rect2(12, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h8um"]
atlas = ExtResource("4_8h8um")
region = Rect2(24, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_8447h"]
atlas = ExtResource("4_8h8um")
region = Rect2(36, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_74w31"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74w31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp5qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h8um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8447h")
}],
"loop": false,
"name": &"speak",
"speed": 4.0
}]

[node name="RandomNpcDialogue" type="Node2D"]
z_index = 1
script = ExtResource("1_kicr1")

[node name="RandDialogueTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_8447h")

[node name="AnimatedSpeaking" type="AnimatedSprite2D" parent="."]
position = Vector2(12, -8)
sprite_frames = SubResource("SpriteFrames_74w31")
animation = &"speak"

[connection signal="timeout" from="RandDialogueTimer" to="." method="_on_rand_dialogue_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="animation_finished" from="AnimatedSpeaking" to="." method="_on_animated_speaking_animation_finished"]
